Fix spacing on home page

--- a/app/assets/stylesheets/api/events.scss
+++ b/app/assets/stylesheets/api/events.scss
@@ -38,7 +38,8 @@
   display: flex;
   justify-content: flex-start;
   margin: 15px 30%;
-  max-width: 650px;
+  min-width: 500px;
+  max-width: 750px;
   border: 1px solid #c6c6c6;
   border-radius: 10px;
   overflow: hidden;
