--- a/app/assets/stylesheets/api/footer.scss
+++ b/app/assets/stylesheets/api/footer.scss
@@ -3,11 +3,11 @@
   display: flex;
   justify-content: space-around;
   align-items: flex-end;
-  padding: 20px 0;
   list-style-type: none;
   color: white;
   font-family: 'Raleway', sans-serif;
   text-transform: uppercase;
+  margin-bottom: 20px;
 }
 
 .footer ul li {
@@ -19,5 +19,6 @@
 }
 
 .footer-icon {
+  padding: 10px;
   height: 30px;
 }
